--- a/EasyCalc/app/build.gradle
+++ b/EasyCalc/app/build.gradle
@@ -36,6 +36,8 @@ android {
 }
 
 dependencies {
+    implementation 'org.mariuszgromada.math:MathParser.org-mXparser:4.4.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
